deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hub-of-hubs-repo
spec:
  replicas: 1
  selector:
    matchLabels:
      name: hub-of-hubs-repo
  template:
    metadata:
      labels:
        name: hub-of-hubs-repo
    spec:
      serviceAccountName: hub-of-hubs-repo
      containers:
        - name: hub-of-hubs-repo
          image: quay.io/open-cluster-management-hub-of-hubs/hub-of-hubs-repo:latest
          imagePullPolicy: Always
          args: []
          ports:
            - containerPort: 3000
