deploy/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: hub-of-hubs-repo
  labels:
    name: hub-of-hubs-repo
spec:
  port:
    targetPort: http
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: hub-of-hubs-repo
    weight: 100
  wildcardPolicy: None
